<resources>
    <string name="google_maps_api_key">AIzaSyCEu4_Mfes0JEmAJiJ_OToXoj2QkEdun5Y</string>
    <string name="app_name"><u>TutorScape</u></string>
    <string name="bold_app_name"><b><u>TutorScape</u></b></string>
    <string name="login_button">Log In</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="Register">Don\'t have an account? <u><b>Sign Up</b></u></string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="register_text">Just one step to start exploring the education world</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_DOB">Enter Birth Date (DD/MM/YY)</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="register_button">Register</string>
    <string name="existing_login">Already have an account? <u><b>Log In</b></u></string>
    <string name="exist_account_text"><b>Enter your email, we\'ll send you a link to change to a new password</b></string>
    <string name="send_link_pass">Send link</string>
    <string name="progress_text"><b>Please Wait...</b></string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title"><b>Search</b></string>
    <string name="map_title"><b>Map</b></string>
    <string name="updates_title"><b>Updates</b></string>
    <string name="notif_title"><b>Notif.</b></string>
    <string name="update_text"><b>Latest Updates</b></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="search_bar_text">Search…</string>
    <string name="filter_bar_text">Search for Tuition Centre…</string>

    <string name="TC_item_name">tuition centre name</string>
    <string name="TC_item_address">tuition centre address</string>
    <string name="TC_item_postal">tuition centre postal code</string>
    <string name="TC_item_contact">tuition centre contact number</string>
    <string name="TC_item_website">tuition centre website</string>
    <string name="TC_item_Rating">tuition centre rating (num)</string>
    <string name="TC_levels">tuition centre levels</string>
    <string name="TC_subjects">tuition centre subjects</string>
    <string name="TC_exams">tuition centre exams</string>
    <string name="TC_type">tuition centre type</string>
    <string name="TC_operatingHrs">tuition centre operating hours</string>

    <string name="TC_review_header"><u>Reviews</u></string>
    <string name="TC_review_title">Overall Rating for this Tuition Centre (Location):</string>
    <string name="TC_review_all">All Reviews</string>

    <string name="updates_item_info">tuition centre update</string>
    <string name="updatesFilter_option1">Newest to Oldest</string>
    <string name="updatesFilter_option2">Oldest to Newest</string>
    <string name="updates_item_date">update date</string>

    <string name="address_msg"><b>Address</b>: %s</string>
    <string name="postal_msg"><b>Postal</b>: %s</string>
    <string name="contact_msg"><b>Contact</b>: %s</string>
    <string name="website_msg"><b>Website</b>: %s</string>
    <string name="rating_msg"><b>Rating</b>: %s</string>

    <string name="levels_msg"><b>Levels</b>: %s</string>
    <string name="subjects_msg"><b>Subjects</b>: %s</string>
    <string name="exams_msg"><b>Exams</b>: %s</string>
    <string name="type_msg"><b>Type</b>: %s</string>
    <string name="opHrs_msg"><b>Operating Hours</b>: %s</string>

    <string name="percentage_placeholder">%d %%</string>

    <string name="add_review_click">Add Review</string>
    <string name="add_favourites_click">Add To Favourites</string>
    <string name="five_star">5</string>
    <string name="four_star">4</string>
    <string name="three_star">3</string>
    <string name="two_star">2</string>
    <string name="one_star">1</string>
    <string name="percentage_review">Percentage</string>
    <string name="noReviews_placeholder">total number of reviews</string>
    <string name="totalNo_reviews">%s reviews</string>

    <string name="filter_text">Filter</string>
    <string name="level_option">Level</string>
    <string name="exam_option">Exam</string>
    <string name="subject_option">Subject</string>
    <string name="type_option">Type</string>
    <string name="apply_button">Apply</string>
    <string name="reset_button">Reset</string>
    <string-array name="level_selection">
        <item>Primary</item>
        <item>Secondary</item>
        <item>JC</item>
        <item>IB</item>
        <item>IP</item>
        <item>IGCSE</item>
        <item>University</item>
    </string-array>
    <string-array name="exam_selection">
        <item>PSLE</item>
        <item>O Level</item>
        <item>N Level</item>
        <item>A Level</item>
        <item>AEIS</item>
        <item>GRE</item>
        <item>GMAT</item>
        <item>SAT</item>
        <item>IELTS</item>
    </string-array>
    <string-array name="subject_selection">
        <item>English</item>
        <item>Chinese</item>
        <item>Malay</item>
        <item>Tamil</item>
        <item>Hindi</item>
        <item>Science</item>
        <item>GP</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Maths</item>
        <item>Special Needs</item>
        <item>History</item>
        <item>Geography</item>
        <item>Social Studies</item>
        <item>Literature</item>
        <item>POA</item>
        <item>Economics</item>
        <item>GEP Preparatory</item>
        <item>Phonics</item>
        <item>Creative Writing</item>
        <item>Higher Chinese</item>
        <item>Uni Courses</item>
    </string-array>
    <string-array name="type_selection">
        <item>Group</item>
        <item>Home</item>
        <item>1-to-1</item>
        <item>Online</item>
    </string-array>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="large_text">large text</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_fragment">Search Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="updates_fragment">Updates Fragment</string>
    <string name="notif_fragment">Notifications Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_reviews">Your Reviews</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="your_reviews_title">Your Reviews</string>
    <string name="edit_review_option">Edit Review</string>
    <string name="delete_review_option">Delete Review</string>
    <string name="favourites_title">Favourites</string>
    <string name="settings_title">Settings</string>

    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="security">Security</string>
</resources>