<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/level_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_option" />

    <TextView
        android:id="@+id/exam_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exam_option" />

    <TextView
        android:id="@+id/subject_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_option" />

    <TextView
        android:id="@+id/type_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_option" />


</LinearLayout>