<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_account"
        android:title="@string/account"
        android:icon="@drawable/ic_account"
        app:cnb_iconColor="@color/color_account"
        app:cnb_textColor="@color/color_account"/>
    <item
        android:id="@+id/item_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications_circle"
        app:cnb_iconColor="@color/color_notifications"
        app:cnb_textColor="@color/color_notifications"/>
    <item
        android:id="@+id/item_security"
        android:title="@string/security"
        android:icon="@drawable/ic_security"
        app:cnb_iconColor="@color/color_security"
        app:cnb_textColor="@color/color_security"/>

</menu>