<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/tutorscape_main">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/rounded_text_background"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/techBlue"
        android:textSize="18sp"
        android:textColor="@color/techBlue"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/rounded_text_background"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ  "
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/techBlue"
        android:textSize="18sp"
        android:textColor="@color/techBlue"/>

    <EditText
        android:id="@+id/enterDOB"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="435dp"
        android:background="@drawable/rounded_text_background"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_DOB"
        android:inputType="date"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/techBlue"
        android:textSize="18sp"
        android:textColor="@color/techBlue"/>

    <EditText
        android:id="@+id/enterMobile"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/rounded_text_background"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_mobile"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/techBlue"
        android:textSize="18sp"
        android:textColor="@color/techBlue"/>

    <EditText
        android:id="@+id/enterPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="565dp"
        android:background="@drawable/rounded_text_background"
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/techBlue"
        android:textSize="18sp"
        android:textColor="@color/techBlue"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/techBlue"
        android:fontFamily="@font/ubuntu"
        android:text="@string/register_button"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="57dp"
        android:layout_marginTop="630dp"/>

    <TextView
        android:id="@+id/existing_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="685dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/existing_login"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="214dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/app_name"
        android:textColor="@color/darkBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.401" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="47dp"
        app:srcCompat="@drawable/education_icon_128___" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="258dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/enterDOB"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="-40dp"
        app:srcCompat="@drawable/calender_icon" />

</RelativeLayout>