<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/tutorscape_main"
    android:id="@+id/constraint_layout">

    <ImageView
        android:id="@+id/edu_icon"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:src="@drawable/education_icon_128___"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            app:srcCompat="@drawable/education_icon_128___" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/app_name"
            android:textColor="@color/darkBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_text_background"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="@color/techBlue"
            android:textSize="18sp"
            android:textColor="@color/techBlue"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_text_background"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColorHint="@color/techBlue"
            android:textSize="18sp"
            android:textColor="@color/techBlue"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/techBlue"
            android:fontFamily="@font/ubuntu"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgetPass"
            android:layout_width="113dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/forgot_pass"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
