<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_background"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/update_image"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_title"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu"
            android:text="@string/TC_item_name"
            android:layout_margin="5dp"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_date"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/red"
            android:text="@string/updates_item_date"
            android:padding="5dp"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_info"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu"
            android:layout_margin="5dp"
            android:text="@string/updates_item_info"/>


    </LinearLayout>

</RelativeLayout>